external-crates/move/crates/move-compiler/tests/move_2024/unit_test/expected_failure_constants_shadowed_module_invalid@unit_test.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E10003]: invalid attribute value
   ┌─ tests/move_2024/unit_test/expected_failure_constants_shadowed_module_invalid.move:10:35
   │
10 │     #[expected_failure(abort_code=a::a::C)]
   │                                   ^^^^^^^ Invalid value in attribute assignment
   │
   = Expected a u64 literal or named constant
